scripts/nullaway/original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8.txt
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/Pokemon.java:67: error: [NullAway] initializer method does not guarantee @NonNull fields primary (line 18), secondary (line 19), name (line 55), status (line 56), type1 (line 57), type2 (line 58), potentials (line 59), circumvent (line 60), moveLibrary (line 61), battleReady (line 62) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Pokemon()
           ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/Pokemon.java:188: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return battleReady.get(searchTerm);
        ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/Pokemon.java:194: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return battleReady.get(key);
        ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/types/Type.java:19: error: [NullAway] initializer method does not guarantee @NonNull fields name (line 14), resistantTypes (line 15), effectiveTypes (line 16), immuneTypes (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Type()
           ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:22: error: [NullAway] @NonNull field userInput not initialized
    private JTextField userInput;
                       ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:182: error: [NullAway] @NonNull field Miove1 not initialized
    private javax.swing.JButton Miove1;
                                ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:183: error: [NullAway] @NonNull field buttonGroup1 not initialized
    private javax.swing.ButtonGroup buttonGroup1;
                                    ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:184: error: [NullAway] @NonNull field buttonGroup2 not initialized
    private javax.swing.ButtonGroup buttonGroup2;
                                    ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:185: error: [NullAway] @NonNull field buttonGroup3 not initialized
    private javax.swing.ButtonGroup buttonGroup3;
                                    ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:186: error: [NullAway] @NonNull field buttonGroup4 not initialized
    private javax.swing.ButtonGroup buttonGroup4;
                                    ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:187: error: [NullAway] @NonNull field jButton2 not initialized
    private javax.swing.JButton jButton2;
                                ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:188: error: [NullAway] @NonNull field jButton3 not initialized
    private javax.swing.JButton jButton3;
                                ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:189: error: [NullAway] @NonNull field jButton4 not initialized
    private javax.swing.JButton jButton4;
                                ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:190: error: [NullAway] @NonNull field jDialog1 not initialized
    private javax.swing.JDialog jDialog1;
                                ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:191: error: [NullAway] @NonNull field jTextField1 not initialized
    private javax.swing.JTextField jTextField1;
                                   ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:192: error: [NullAway] @NonNull field jTextField2 not initialized
    private javax.swing.JTextField jTextField2;
                                   ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:193: error: [NullAway] @NonNull field jTextField4 not initialized
    private javax.swing.JTextField jTextField4;
                                   ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:194: error: [NullAway] @NonNull field textArea1 not initialized
    private java.awt.TextArea textArea1;
                              ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:20: error: [NullAway] @NonNull static field moveLibrary not initialized
    private static HashMap<String, Move> moveLibrary;
                                         ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonTeam.java:45: error: [NullAway] @NonNull static field pokeLibrary not initialized
    private static HashMap<String, Pokemon> pokeLibrary;
                                            ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/SpecifiedSpecial.java:19: error: [NullAway] @NonNull field primary not initialized
    protected Type primary;
                   ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/SpecifiedSpecial.java:22: error: [NullAway] @NonNull field type not initialized
    protected String type;
                     ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/SpecifiedSpecial.java:23: error: [NullAway] @NonNull field name not initialized
    protected String name;
                     ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/SpecifiedPhysical.java:17: error: [NullAway] @NonNull field primary not initialized
    protected Type primary;
                   ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/SpecifiedPhysical.java:19: error: [NullAway] @NonNull field type not initialized
    protected String type;
                     ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/SpecifiedPhysical.java:21: error: [NullAway] @NonNull field name not initialized
    protected String name;
                     ^
    (see http://t.uber.com/nullaway )
../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/Field.java:29: error: [NullAway] initializer method does not guarantee @NonNull fields fighters (line 23), p1 (line 24), p2 (line 25) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Field(Pokemon p1, Pokemon p2)
           ^
    (see http://t.uber.com/nullaway )
Note: ../original/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
27 errors
